# Flexvoice-wrapper

./: CMakeLists.txt  readme.md
include/: fvwrap.h
src/: flexvoice.py  fvwrap.cpp
